# latsham

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
py/: caldata.py  latsham_mcmc.ipynb  latsham_utils.py  test.ipynb
src/: latsham.hpp  main.cpp  midpnt.cpp  models.hpp  qromo.cpp  tests.cpp
